# moos-ros-bridge

./: .gitignore  README.md  moos_run.sh
gazebo_moos/: CMakeLists.txt  package.xml
gazebo_moos/launch/: gazebo_wamv_alpha.launch
gazebo_moos/src/: gazebo_wamv_alpha.cpp
moosros/: CMakeLists.txt  package.xml
moosros/moos/BH_cave/: test.moos
moosros/moos/example/: bridge.moos  counters.xml  moosconfig.xml
moosros/moos/robotx/gazebo_wamv_alpha/: alpha.bhv  alpha.moos  alpha.xml
moosros/moos/robotx/sandisland/: alpha.moos
moosros/src/: Bridge.cpp
moosros_tester/: CMakeLists.txt  package.xml
moosros_tester/launch/: example.launch  example_w_sim.launch
moosros_tester/scripts/: example.sh
moosros_tester/src/: counter.cpp
